Better reference file detection + info output Added examples of missing keys + unknown keys

--- a/examples/Test.properties
+++ b/examples/Test.properties
@@ -5,4 +5,4 @@ error2=Weird amount {0,number}
 error3=Weird date {0,date}, {1}
 error4=Weird text {0}
 title=Hello
-
+latestAddition=Not yet in other files !
